--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,38 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+li{
+  list-style: none;
+}
+.country-info{
+  margin: 50px;
+}
+.flag_img{
+  margin-right: 40px;
+  width: 30px;
+  box-shadow: 1px 2px 3px black;
+}
+.main{
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+  }
+  p{
+    margin-right: 22px;
+    display: block;
+    font-size: 10px;;
+  }
+  .country_item{
+  display: flex
+  }
+  h2{
+    font-size: 10px;
+  }
+
+  .country-list {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-basis: calc((100% - 20px) / 1);
+    font-size: 10px;
+  }
